# DFT-LOC_project

./: .gitignore  CO.xyz  LICENSE  README.md  Thermochemistry_Molecules_dataset1.csv  pyproject.toml
Branched/: 3_ethyl_4_methex.xyz  4-ethyl_3_3_dimethep.xyz  4_ethyl_2_methylhex.xyz  README
Coordinates/: README  Si2.xyz  alf3.xyz  ch3_2_so2.xyz  ch3_2so.xyz  ch3_ch2_ch_ch3_no2.xyz  cl2s2.xyz  clf3.xyz  co.xyz  nacl.xyz  o3.xyz  pcl5.xyz  pf3.xyz  pyrrole.xyz  sif4.xyz  so2cl2.xyz
G2_xyz/: 2-butyne-new.xyz  Acetaldehyde-new.xyz  Acethylene-new.xyz  Acetone-new.xyz  AlCl3-new.xyz  AlF3-new.xyz  Allene-new.xyz  Aziridine-new.xyz  BCl3-new.xyz  BF3-new.xyz  Benzene-new.xyz  Bicyclo-1-1-0-butane-new.xyz  CCl2CCl2-new.xyz  CCl4-new.xyz  CF2CF2-new.xyz  CF3-CN-new.xyz  CF4-new.xyz  CH2-m1-A1-new.xyz  CH2CH-CN-new.xyz  CH2Cl2-new.xyz  CH2F2-new.xyz  CH3-CH2-CH2-Cl-new.xyz  CH3-CH2-Cl-new.xyz  CH3-CH2-O-CH3-new.xyz  CH3-CH2-SH-new.xyz  CH3-CN-new.xyz  CH3-O-CH3-new.xyz  CH3-O-NO-new.xyz  CH3-S-CH3-new.xyz  CH3-SH-new.xyz  CH3-SiH3-new.xyz  CH3CFO-new.xyz  CH3COCl-new.xyz  CH3CONH2-new.xyz  CH3COOH-new.xyz  CH3Cl-new.xyz  CH3NO2-new.xyz  CH4-new.xyz  CHCl3-new.xyz  CLF3-new.xyz  (+82 more)
G3_xyz/: 1,3-DiFluorobenzene-new.xyz  1,3-cyclohexadiene-new.xyz  1,4-DiFluorobenzene-new.xyz  2,5-Dihydrothiophene-new.xyz  2-methyl-new.xyz  3-methyl-new.xyz  Acetic-new.xyz  C4H4N2-new.xyz  C4H6-new.xyz  C4H6O-new.xyz  C4H8O2-new.xyz  C5H8-new.xyz  C6H12-new.xyz  C6H5-CH3-new.xyz  C6H5-NH2-new.xyz  C6H5-OH-new.xyz  C6H5-new.xyz  CH3-CH2-CH_CH3_-NO2-new.xyz  CH3-CH2-CO-CH2-CH3-new.xyz  Cl2O2S-new.xyz  (+56 more)
(+45 files in other folders)
